bobcat (5.00.00)

  * New members replacing old ones:
        - in all classes previously offering a pSync member:
            - sync() replaces pSync() 
        - IOStreambuf::xsputn()     replaces IOStreambuf::pXsputn() 
        - Process::childErrStream() replaces Process::cerr()

  * ConfigFile:
        - removed deprecated members:
            beginRE(std::string const &re);
            endRE() const;
        - fixed a (potentially occurring) segfault in ConfigFile

  * CSV: removed, use CSV4180 instead.

  * DateTime:
      - The TriVal type is not used anymore. Instead, `true' (DST is used for
            the object's time) and `false' (DST is not used) are used.
      - DateTime(std::chrono::minutes zoneMinutes) replaces 
            DateTime(int zoneMinutes) 
        DateTime operator@(DateTime const &obj, std::chrono::seconds seconds)
            replaces operator@(DateTime const &obj, time_t seconds)
        (where @ is + or -)
        DateTime operator@(std::chrono::seconds seconds)
            replaces operator@(time_t seconds)
        (where @ is += or -=)
      - setUTCseconds() replaces setTime()
      - utcSeconds() replaces time()
      - setFields(tm const &ts, TimeFields fields) replaces
            setFields(tm const &ts, int fields)
      - Members expecting or returning size_t values now expect or return
            unsigned values
      - Members returning bool values are now void members
      - Discontinued:
            The TriVal enum
            DateTime(int zoneMinutes, DSTSpec const &dstSpec) 
            DateTime(time_t time, int zoneMinutes, DSTSpec const &dstSpec)
            DateTime(tm const &ts, int zoneMinutes)
            DateTime(tm const &ts, int zoneMinutes, DSTSpec const &dstSpec)
            DateTime(std::string const &timeStr, int zoneMinutes)
            DateTime(std::string const &timeStr, int zoneMinutes, 
                     DSTSpec const &dstSpec)
            DateTime(std::istream &in, int zoneMinutes)