@@ -1,3 +1,2 @@
 Provide examples in the following man-pages:
-    ifdstreambuf.yo
     milter.yo
