@@ -38,7 +38,7 @@ manpagesection(CONSTRUCTORS)
     itemization(
     itb(IFdStreambuf())
         This constructor initializes the streambuf, without associating it to
-a file descriptor, and without using buffering. The member bf(open()) can be
+a file descriptor, and without using buffering. The member tt(reset) can be
 used subsequently to associate the object with a file descriptor and
 optionally a buffer size. When the object is destroyed or if the mode-less
 overloaded version of the bf(open) member is called, the file descriptor will
@@ -84,13 +84,13 @@ no longer be used until one of its tt(open) members has been called.
         If the tt(OFdStreambuf) is not associated with a file descriptor -1 is
         returned. 
 
-    itb(void open(int xfd, size_t n = 1))
+    itb(void reset(int xfd, size_t n = 1))
         The streambuf is (re)initialized, using file descriptor tt(fd), and an
 optional unget buffer size (by default having size 1). When called repeatedly,
 the bf(Mode) specification used whem the object was constructed determines
 whether the file descriptor will be closed or will remain open.
 
-    itb(void open(int xfd, Mode mode, size_t n = 1))
+    itb(void reset(int xfd, Mode mode, size_t n = 1))
         The streambuf is (re)initialized, using file descriptor tt(fd), a file
 descriptor closing parameter and an optional unget buffer size (by default
 having size 1). Depending on the bf(Mode) argument the object's currently used
@@ -99,7 +99,8 @@ object is destroyed.
     )
 
 manpagesection(EXAMPLE)
-    To do
+
+    verbinclude(../../ifdstreambuf/driver/driver.cc)
 
 manpagefiles()
     em(bobcat/ifdstreambuf) - defines the class interface
