@@ -1,0 +1,4 @@
+#define LIBRARY             "ifdstreambuf"
+
+#include "../icmconf"
+
