@@ -1,12 +1,12 @@
 #ifndef INCLUDED_BOBCAT_IFDSTREAMBUF_
 #define INCLUDED_BOBCAT_IFDSTREAMBUF_
 
-#include <streambuf>
+#include <bobcat/eoibuf>
 
 namespace FBB
 {    
 
-class IFdStreambuf: public std::streambuf
+class IFdStreambuf: public EoiBuf
 {
     public:
             // Mode defines what to do with the file descriptor at
@@ -24,26 +24,24 @@ class IFdStreambuf: public std::streambuf
 
     private:
         Mode        d_mode;
-        int         d_fd;
-        size_t      d_n;
-        char*       d_buffer;
+        int         d_fd = -1;
 
     public:
-        IFdStreambuf();
+        IFdStreambuf();                                     // 1
         IFdStreambuf(IFdStreambuf const &other) = delete;
 
-        explicit IFdStreambuf(Mode mode);
-        explicit IFdStreambuf(int fd, size_t n = 1);
-        IFdStreambuf(int fd, Mode mode, size_t n = 1);
+        explicit IFdStreambuf(Mode mode);                   // 2
+        explicit IFdStreambuf(int fd, size_t size = 1);     // 3
+        IFdStreambuf(int fd, Mode mode, size_t size = 1);   // 4
 
         ~IFdStreambuf() override;
 
         IFdStreambuf &operator=(IFdStreambuf const &other) = delete;
 
-        void close();                                           // .f
+        void reset(int xfd, Mode mode, size_t size = 1);        // .cc
+        void reset(int xfd, size_t size = 1);                   // .f
 
-        void open(int xfd, Mode mode, size_t n = 1);
-        void open(int xfd, size_t n = 1);                       // .f
+        void close();                                           // .f
         
         int fd() const;                                         // .f
 
@@ -54,10 +52,11 @@ class IFdStreambuf: public std::streambuf
         void cleanup(Mode mode);
 };
 
-#include "open.f"
+#include "reset.f"
 #include "close.f"
 #include "fd.f"
 
 } // FBB
 
 #endif
+
