@@ -2,9 +2,7 @@
 
 IFdStreambuf::IFdStreambuf()
 :
-    d_mode(KEEP_FD),         // comply with old default
-    d_fd(-1),
-    d_n(0),
-    d_buffer(0)
+    EoiBuf(0),
+    d_mode(KEEP_FD)          // comply with old default
 {}
 
