@@ -2,8 +2,6 @@
 
 IFdStreambuf::IFdStreambuf(Mode mode)
 :
-    d_mode(mode),
-    d_fd(-1),
-    d_n(0),
-    d_buffer(0)
+    EoiBuf(0),
+    d_mode(mode)
 {}
