@@ -1,4 +1,0 @@
-inline void IFdStreambuf::open(int xfd, size_t n)
-{
-    open(xfd, d_mode, n);
-}
