@@ -1,11 +1,11 @@
 #include "ofdstreambuf.ih"
 
-void OFdStreambuf::reset(int fd, Mode mode, size_t bufSize)
+void OFdStreambuf::reset(int fd, Mode mode, size_t size)
 {
     cleanup(mode);
 
     d_fd = fd;
-    resize(bufSize == 0 ? 1 : bufSize);
+    resize(size == 0 ? 1 : size);
 
     setp();
 }
